--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
+<!-- Designined by Rishab -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
